Fixed overflow issues with dropdown

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -2,12 +2,14 @@ $max-nav-width: 1100px;
 $spacer: 30vw;
 $fixed-spacer-sm: 200px;
 $fixed-spacer-md: 200px;
-$fixed-spacer-lg: 300px;
+$fixed-spacer-lg: 280px;
 $totalNavHeight: 125px;
 $contactBannerHeight: 54px;
 
 .global-header {
   // overflow: hidden;
+  position: relative;
+  z-index: 2;
 
   .header-wrapper {
     align-items: center;
@@ -25,10 +27,6 @@ $contactBannerHeight: 54px;
       align-items: flex-start;
       flex-direction: row;
       padding: 0;
-    }
-
-    @include lg {
-      height: 125px;
     }
   }
 
@@ -217,7 +215,7 @@ $contactBannerHeight: 54px;
         @include lg {
           justify-content: space-between;
           padding: 0 16px 0 8px;
-          width: calc(100vw - #{$fixed-spacer-lg});
+          width: calc(100vw - #{$fixed-spacer-lg} - 20px);
         }
         max-height: 54px;
         padding: 0 0 0 0;
@@ -702,7 +700,7 @@ $contactBannerHeight: 54px;
     left: 50%;
     padding: $distance-from-menu;
     width: $submenu-width;
-    margin-left: -$submenu-width;
+    margin-left: -($submenu-width / 2);
     margin-top: -($distance-from-menu - 1);
     opacity: 0;
     pointer-events: none;
